--- a/app/templates/plants/onboarding.html
+++ b/app/templates/plants/onboarding.html
@@ -435,5 +435,8 @@
   </div>
 </div>
 
+{% endblock %}
+
+{% block extra_scripts %}
 <script src="{{ url_for('static', filename='js/onboarding.js') }}"></script>
 {% endblock %}
